--- a/stack/Pulumi.seqr.yaml
+++ b/stack/Pulumi.seqr.yaml
@@ -7,6 +7,8 @@ config:
   datasets:hail_service_account_test: seqr-test-709@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: seqr-standard-943@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: seqr-full-041@hail-295901.iam.gserviceaccount.com
+  datasets:deployment_service_account_test: seqr-dev@seqr-308602.iam.gserviceaccount.com
+  datasets:deployment_service_account_standard: seqr-prod@seqr-308602.iam.gserviceaccount.com
   gcp:billing_project: seqr-308602
   gcp:project: seqr-308602
   gcp:user_project_override: "true"
