--- a/dataproc/Dockerfile
+++ b/dataproc/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:20.04
+FROM ubuntu:21.04
+
+ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt update && \
     apt install -y --no-install-recommends apt-transport-https ca-certificates curl g++ git gnupg openjdk-8-jdk-headless libopenblas-base liblapack3 python3-pip zip && \
@@ -6,4 +8,4 @@ RUN apt update && \
     curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
     apt update && apt install -y google-cloud-sdk && \
     apt clean && rm -rf /var/lib/apt/lists/* && \
-    pip3 install hail==0.2.73
+    pip3 install cpg-hail==0.2.78
