--- a/stack/Pulumi.seqr.yaml
+++ b/stack/Pulumi.seqr.yaml
@@ -2,7 +2,7 @@ encryptionsalt: v1:58BWphXSDio=:v1:9KydLgEdNGdRloZf:phZCGaeRzAGsTdOdTWBG1Wbu6GtX
 config:
   datasets:archive_age: "30"
   datasets:customer_id: C010ys3gt
-  datasets:depends_on: '["acute-care", "perth-neuro", "rdnow", "heartkids", "ravenscroft-rdstudy"]'
+  datasets:depends_on: '["acute-care", "perth-neuro", "rdnow", "heartkids", "ravenscroft-rdstudy", "ohmr3-mendelian"]'
   datasets:enable_release: "false"
   datasets:hail_service_account_test: seqr-test-709@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: seqr-standard-758@hail-295901.iam.gserviceaccount.com
