--- a/stack/Pulumi.nagim.yaml
+++ b/stack/Pulumi.nagim.yaml
@@ -3,7 +3,7 @@ config:
   datasets:archive_age: "30"
   datasets:customer_id: C010ys3gt
   datasets:depends_on: '["acute-care", "mgrb", "hgdp", "tob-wgs", "amp-pd"]'
-  datasets:enable_release: "false"
+  datasets:enable_release: "true"
   datasets:hail_service_account_test: nagim-test-133@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_standard: nagim-standard-388@hail-295901.iam.gserviceaccount.com
   datasets:hail_service_account_full: nagim-full-637@hail-295901.iam.gserviceaccount.com
