--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -4,25 +4,24 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
-  - black
-  - cpg-utils
-  - flake8
-  - flake8-bugbear
-  - flask
-  - google-auth=1.24.0
-  - google-api-python-client=2.10.0
-  - google-cloud-pubsub=2.3.0
-  - google-cloud-secret-manager=2.2.0
-  - google-cloud-storage=1.38.0
-  - hail
-  - pre-commit
-  - pylint
-  - python-kubernetes=12.0.1
-  - python=3.7
-  - bump2version
-  - requests
-  - tabulate
   - pip
+  - cpg-utils  # Not yet in pypi.
   - pip:
-    - airtable-python-wrapper==0.15.1
+    - airtable-python-wrapper
+    - black
+    - bump2version
+    - cpg-hail
+    - flake8
+    - flake8-bugbear
+    - flask
+    - google-api-python-client
+    - google-auth
+    - google-cloud-pubsub
+    - google-cloud-secret-manager
+    - google-cloud-storage
+    - pre-commit
     - pulumi-gcp
+    - pylint
+    - python-kubernetes
+    - requests
+    - tabulate
