--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -4,6 +4,7 @@ channels:
   - bioconda
   - conda-forge
 dependencies:
+  - python=3.9
   - pip
   - analysis-runner  # Not yet in pypi.
   - cpg-utils  # Not yet in pypi.
