--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,7 +17,9 @@ jobs:
         cache: 'pip'
 
     - name: Install packages
-      run: pip install -r requirements.txt
+      run: |
+        pip install .
+        pip install -r requirements-dev.txt
 
     - name: pre-commit
       run: pre-commit run --all-files
