--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,3 +23,6 @@ jobs:
 
     - name: pre-commit
       run: pre-commit run --all-files
+
+    - name: Run-tests
+      run: python -m unittest test/test_analysis_runner.py
