--- a/.pylintrc
+++ b/.pylintrc
@@ -11,11 +11,15 @@
 #    C0326: Bad whitespace
 # 5. fixme (left 'TODO' lines)
 # 6. line-too-long
-# 7. similar lines
+# 7. too-many-statements
+# 8. too-many-lines
+# 9. R0801 (duplicate-code)
+# 10. similar lines
+# 11. import-error
 
 disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,
-        C0326,fixme,logging-fstring-interpolation,line-too-long,too-many-statements,
-        R0801,too-many-lines
+        C0326,fixme,line-too-long,too-many-statements,too-many-lines,
+        R0801,import-error
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
