--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Lint
 on: [push, pull_request]
 
 jobs:
@@ -11,18 +11,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: conda-incubator/setup-miniconda@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+        cache: 'pip'
 
     - name: Install packages
       run: |
-        conda env create --name test-env -f environment-dev.yml
+        pip install .
+        pip install -r requirements-dev.txt
 
     - name: pre-commit
-      run: |
-        conda activate test-env
-        pre-commit run --all-files
+      run: pre-commit run --all-files
 
     - name: Run-tests
-      run: |
-        conda activate test-env
-        python -m unittest test/test_analysis_runner.py
+      run: python -m unittest test/test_analysis_runner.py
