--- a/.pylintrc
+++ b/.pylintrc
@@ -2,20 +2,26 @@
 # We disable the following inspections:
 # 1. f-string-without-interpolation (we allow f-strings that don't do any
 #    formatting for consistent looks and for future safety)
-# 2. inherit-non-class ("Inheriting 'NamedTuple', which is not a class" false
+# 2. logging-fstring-interpolation ("Use lazy % formatting in logging functions")
+# 3. inherit-non-class ("Inheriting 'NamedTuple', which is not a class" false
 #    positive, see: https://github.com/PyCQA/pylint/issues/3876)
-# 3. too-few-public-methods (produces false positives)
-# 4. inspections incompatible with Black (see
+# 4. too-few-public-methods (produces false positives)
+# 5. inspections incompatible with Black (see
      https://github.com/psf/black/blob/master/docs/compatible_configs.md#why-those-options-above-2):
 #    C0330: Wrong hanging indentation before block (add 4 spaces)
 #    C0326: Bad whitespace
-# 5. fixme (left 'TODO' lines)
-# 6. line-too-long
-# 7. similar lines
+# 6. fixme (left 'TODO' lines)
+# 7. line-too-long
+# 8. too-many-statements
+# 9. too-many-lines
+# 10. R0801 (duplicate-code)
+# 11. similar lines
+# 12. import-error
 
-disable=f-string-without-interpolation,inherit-non-class,too-few-public-methods,C0330,
-        C0326,fixme,logging-fstring-interpolation,line-too-long,too-many-statements,
-        R0801,too-many-lines
+disable=f-string-without-interpolation,logging-fstring-interpolation,
+        inherit-non-class,too-few-public-methods,C0330,
+        C0326,fixme,line-too-long,too-many-statements,too-many-lines,
+        R0801,import-error
 
 # Overriding variable name patterns to allow short 1- or 2-letter variables
 attr-rgx=[a-z_][a-z0-9_]{0,30}$
