--- a/driver/Dockerfile
+++ b/driver/Dockerfile
@@ -25,9 +25,9 @@ RUN apt-get update && apt-get install -y git wget bash bzip2 zip && \
         statsmodels && \
     rm -r /root/micromamba/pkgs && \
     pip3 install \
-        cpg-hail=$HAIL_VERSION \
-        cpg-utils=2.1.1 \
+        cpg-hail==$HAIL_VERSION \
+        cpg-utils==2.1.1 \
         analysis-runner \
-        sample-metadata=4.1.2 && \
+        sample-metadata==4.1.2 && \
     # hailctl dataproc uses gcloud beta dataproc.
     gcloud -q components install beta
